# pricecheck-scraper

./: .gitignore  main.py  pyproject.toml
config/: config.yaml
output/: products_data.xlsx
product_scraper_poc/: scraper.py
